logs/weborganiser.log
Listing '.'...
Listing './bin'...
Compiling './bin/WebCalendarApp.py'...
***   File "./bin/WebCalendarApp.py", line 29
    print "Need a store name and the database module name (PgSQL or pysqlite2)."
                                                                               ^
SyntaxError: invalid syntax

Compiling './bin/WebCalendarPortalApp.py'...
***   File "./bin/WebCalendarPortalApp.py", line 29
    print "Need a store name and the database module name (PgSQL or pysqlite2)."
                                                                               ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebCalendar'...
Listing './lib/python3.5/site-packages/WebCalendar/Resources'...
Listing './lib/python3.5/site-packages/WebCalendar/Resources/images'...
Listing './lib/python3.5/site-packages/WebCalendar/Resources/scripts'...
Listing './lib/python3.5/site-packages/WebCalendar/Resources/styles'...
Compiling './lib/python3.5/site-packages/WebCalendar/Selector.py'...
***   File "./lib/python3.5/site-packages/WebCalendar/Selector.py", line 95
    raise ValueError, "" # Not even a year found.
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebCalendarPortal'...
Listing './lib/python3.5/site-packages/WebCalendarPortal/Resources'...
Listing './lib/python3.5/site-packages/WebCalendarPortal/Resources/styles'...
Listing './lib/python3.5/site-packages/WebOrganiser'...
Compiling './lib/python3.5/site-packages/WebOrganiser/RDFAccess.py'...
***   File "./lib/python3.5/site-packages/WebOrganiser/RDFAccess.py", line 398
    except handler.DuplicateResourceError, exc:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebOrganiser-0.2.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
